Created new project

--- a/.gitignore
+++ b/.gitignore
@@ -798,3 +798,9 @@ TestFolder/InnerTest/
 NewclassTesting2/Library
 
 NewclassTesting2/ProjectSettings
+
+Evolutio/Library
+
+Evolutio/ProjectSettings
+
+
